# RapidAudioKit

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: ffmpeg_mem.h  precomp.h  qmaudioinfo.h  qmavdef.h  qmavkits.h  qmavkitsapi.h  qmresample.h
sources/: ffmpeg_mem.cpp  qmavkits.cpp  qmavkitsapi.cpp  qmresample.cpp  qmwav_fmt.cpp  test.cpp
thirdpart/RpidVAD/: CMakeLists.txt
thirdpart/RpidVAD/include/: precomp.h  qmvad_api.h
thirdpart/RpidVAD/sources/: libqmvad.cpp  test.cpp
